--- a/.github/workflows/clap.yml
+++ b/.github/workflows/clap.yml
@@ -92,7 +92,7 @@ jobs:
         run: |
           npm install @studiorack/cli -g
           cp -v ./src/assets/* "${{ matrix.path }}"
-          studiorack validate "${{ matrix.path }}/**/*.{clap}" --files --json --txt --zip --summary
+          studiorack validate "${{ matrix.path }}/**/*.clap" --files --json --txt --zip --summary
 
       - name: Upload
         uses: actions/github-script@v3
